--- a/public/index.css
+++ b/public/index.css
@@ -31,8 +31,8 @@ html, body {
   color: #2b2b2b;
   font-size: 1em;
   line-height: 1.55;
-  margin: 0 auto;
-  max-width: 600px;
+  /*margin: 0 auto;*/
+  max-width: 300px;
   padding-top: 100px;
   width: 100%;
 }
