--- a/public/index.css
+++ b/public/index.css
@@ -23,7 +23,9 @@ html, body {
 .hidden {
   display: none;
 }
-
+.all_games{
+  display: flex;
+}
 
 /* Offline page */
 
@@ -31,10 +33,12 @@ html, body {
   color: #2b2b2b;
   font-size: 1em;
   line-height: 1.55;
-  /*margin: 0 auto;*/
-  max-width: 300px;
-  padding-top: 100px;
+  margin: 0 auto;
+  max-width: 600px;
   width: 100%;
+  display: flex;
+    align-items: center;
+    flex-direction: row;
 }
 
 .offline .runner-container {
@@ -44,6 +48,7 @@ html, body {
   position: absolute;
   top: 35px;
   width: 44px;
+  left: 0;
 }
 
 .offline .runner-canvas {
@@ -70,6 +75,29 @@ html, body {
   display: none;
 }
 
+.profile_details{
+  display: flex;
+    flex-wrap: wrap;
+}
+.profile {
+    width: 220px;
+    text-align: center;
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+}
+
+.profile img{
+  width: 100px;
+  height: 100px;
+}
+
+.profile h3{
+  margin-bottom: 10px;
+  margin-top: 0;
+}
+
 @media (max-width: 420px) {
   .suggested-left > #control-buttons, .suggested-right > #control-buttons {
     float: none;
@@ -80,6 +108,9 @@ html, body {
     width: 100%;
     border-radius: 0;
   }
+  .all_games {
+    display: block;
+}
 }
 
 @media (max-height: 350px) {
@@ -95,12 +126,18 @@ html, body {
   .nav-wrapper {
     margin-top: 30px;
   }
+  .all_games {
+    display: block;
+  }
 }
 
 @media (min-width: 600px) and (max-width: 736px) and (orientation: landscape) {
   .offline .interstitial-wrapper {
     margin-left: 0;
     margin-right: 0;
+  }
+  .all_games {
+    display: block;
   }
 }
 
